--- a/.env
+++ b/.env
@@ -1,3 +1,26 @@
-THEME=https://raw.githubusercontent.com/seanwcom/Red-Graphite-for-Obsidian/HEAD/theme.css
+SITE_NAME_HEADER=BattleTech Merc Campaign
+SITE_MAIN_LANGUAGE=en
+SITE_BASE_URL=
+SHOW_CREATED_TIMESTAMP=false
+TIMESTAMP_FORMAT=MMM dd, yyyy
+SHOW_UPDATED_TIMESTAMP=false
+NOTE_ICON_DEFAULT=
+NOTE_ICON_TITLE=false
+NOTE_ICON_FILETREE=false
+NOTE_ICON_INTERNAL_LINKS=false
+NOTE_ICON_BACK_LINKS=false
+STYLE_SETTINGS_CSS=body.css-settings-manager { --b076-3eaf-before: '🧑'; --3862-844d-before: '📑'; --3862-844d-weight: bold; --3862-844d-decoration: initial; --3862-844d-color: #266FE3; --04aa-e3dd-before: '🛖'; --1d74-3416-before: '👨‍👩‍👧‍👦'; --3059-0c32-before: '⚔️'; --7c37-4ee7-before: '👩‍🌾'; } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
+STYLE_SETTINGS_BODY_CLASSES=mod-windows is-frameless is-hidden-frameless obsidian-app is-maximized theme-light show-inline-title show-ribbon show-view-header css-settings-manager Heading folder-notes-plugin hide-folder-note folder-note-underline-path fn-whitespace-stop-collapsing version-1-7-2 its-theme sidebar-float-bottom justified check-color check-bg slrvb-b is-focused
+USE_FULL_RESOLUTION_IMAGES=false
+THEME=https://raw.githubusercontent.com/SlRvb/Obsidian--ITS-Theme/HEAD/theme.css
 BASE_THEME=dark
 dgHomeLink=true
+dgPassFrontmatter=false
+dgShowBacklinks=true
+dgShowLocalGraph=false
+dgShowInlineTitle=true
+dgShowFileTree=true
+dgEnableSearch=true
+dgShowToc=true
+dgLinkPreview=false
+dgShowTags=true
